2005-11-30	Benedikt Meurer <benny@xfce.org>

	* docs/reference/, exo/exo-gtk-extensions.{c,h}, exo/exo.symbols: Add
	  exo_gtk_object_ref_sink(), which takes a reference on the object and
	  drops the floating reference to the object (if any).

2005-11-29	Benedikt Meurer <benny@xfce.org>

	* docs/reference/, exo/exo-binding.h: Update reference documentation.

2005-11-22	Benedikt Meurer <benny@xfce.org>

	* exo/exo-string.{c,h}, exo/exo.symbols: Add exo_intern_string() and
	  exo_intern_static_string(), which transform a string to it's GQuark
	  representation and thereby can be used to reduce the memory overhead
	  for static strings that will be handed to g_signal_new(),
	  g_type_register_*(), etc.
	* exo/exo-cell-renderer-ellipsized-text.c: We don't need to provide an
	  implementation here if build with Gtk+ 2.6 or above, as starting with
	  Gtk+ 2.6, GtkCellRendererText already provides the required
	  functionality.
	* exo/exo-cell-renderer-ellipsized-text.c, exo/exo-icon-bar.c,
	  exo/exo-icon-view.c, exo/exo-toolbars-editor-dialog.c,
	  exo/exo-toolbars-editor.c, exo/exo-toolbars-model.c,
	  exo/exo-toolbars-view.c, exo/exo-wrap-table.c,
	  exo/exo-xsession-client.c: Use exo_intern_static_string() aka I_() to
	  avoid g_strdup()'ing static strings which are used for GQuarks in
	  various places.
	* po/: Update translations.

2005-11-16	Benedikt Meurer <benny@xfce.org>

	* exo/exo-gdk-pixbuf-extensions.c(exo_gdk_pixbuf_scale_ratio): Be sure
	  to always pass width/height values greater than 0 to
	  gdk_pixbuf_scale_simple().

2005-11-15	Benedikt Meurer <benny@xfce.org>

	* NEWS: Add note about new ca translations. Remove note about ExoObject.

2005-11-14	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Bump version to 0.3.1.1svn.
	* po/*.po, po/libexo-0.3.pot: Update translations.

2005-11-13	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_expose_event): Return FALSE from