@@ -183,18 +183,6 @@ else
     AC_MSG_RESULT([no])
     ;;
   esac
-
-  dnl check for target platform
-  AC_MSG_CHECKING([for target platform])
-  case "$host_cpu" in
-  i386|i486|i586|i686|i786|k6|k7)
-    AC_MSG_RESULT([i386])
-    AC_DEFINE([EXO_CPU_I386], [1], [Define to 1 if target cpu is i386])
-    ;;
-  *)
-    AC_MSG_RESULT([unknown])
-    ;;
-  esac
 fi
 
 dnl ****************************************
@@ -204,6 +192,8 @@ AC_ARG_ENABLE([visibility], AC_HELP_STRING([--disable-visibility], [Don't use EL
 have_gnuc_visibility=no
 if test x"$enable_visibility" != x"no"; then
   dnl Check whether the compiler supports the visibility attribute
+  save_CFLAGS="$CFLAGS"
+  CFLAGS="$CFLAGS -Wall -Werror"
   AC_MSG_CHECKING([whether $CC supports the GNUC visibility attribute])
   AC_COMPILE_IFELSE(AC_LANG_SOURCE(
   [
@@ -218,6 +208,7 @@ if test x"$enable_visibility" != x"no"; then
   [
     AC_MSG_RESULT([no])
   ])
+  CFLAGS="$save_CFLAGS"
 fi
 if test x"$have_gnuc_visibility" = x"yes"; then
   CPPFLAGS="$CPPFLAGS -DHAVE_GNUC_VISIBILITY"
